20250402よくある質問と体験談を修正および追加02

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-x-16 md:gap-y-20 max-w-7xl mx-auto">
                     <!-- サービス1：サマーキャンプ -->
                     <div class="md:bg-white md:p-8 md:rounded-lg">
-                        <img src="./images/images02.jpg" alt="サマーキャンププログラム" class="w-full md:aspect-[4/3] object-cover rounded-lg shadow-xl mb-8">
+                        <img src="./images/S__10854429_0.jpg" alt="サマーキャンププログラム" class="w-full md:aspect-[4/3] object-cover rounded-lg shadow-xl mb-8">
                     </div>
                     <div class="md:bg-lightBg md:p-8 md:rounded-lg flex flex-col justify-center">
                         <ul class="mb-8 space-y-3 px-4 md:px-0">
