ウェブサイトを更新

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 
                     <!-- サービス3：留学準備・手続きサポート -->
                     <div class="md:bg-white md:p-8 md:rounded-lg">
-                        <img src="/ryusapo/images/pussport01.jpg" alt="志望校選び&入学手続きサポート" class="w-full md:aspect-[4/3] object-cover rounded-lg shadow-xl">
+                        <img src="/images/pussport01.jpg" alt="志望校選び&入学手続きサポート" class="w-full md:aspect-[4/3] object-cover rounded-lg shadow-xl">
                     </div>
                     <div class="md:bg-lightBg md:p-8 md:rounded-lg flex flex-col justify-center">
                         <div class="px-4 md:px-0">
