--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                                 <img src="./images/taiken01.jpg" alt="コースK" class="w-16 h-16 rounded-full object-cover">
                             </div>
                             <div>
-                                <h3 class="text-xl font-bold text-primary">K.A</h3>
+                                <h3 class="text-xl font-bold text-primary">T.K</h3>
                                 <p class="text-gray-600">中学3年生時にサマーキャンプ、その後高校から渡米</p>
                             </div>
                         </div>
